--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ h1 {
 
 #content {
     margin: 0px 15% 0px ;
-		background: #f4f4f4;
+		background: #cacaca;
 		padding-top: 20px;
 		margin-top: 40px;
 }
@@ -410,7 +410,7 @@ section#home-hero{
 @media (max-width:770px) {
 	#content {
 		margin: 0;
-		background: #f4f4f4;
+		background: #cacaca;
 		padding: 20px;
 		margin-top: 40px;
 		color: #555!important;
