--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,22 @@ pre code {
 	font-weight: normal;
 }
 
+table {
+    color: #cacaca;
+    line-height: 1.6;
+    border-color: #cacaca;
+	padding: 45px;
+    word-wrap: break-word;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-spacing: 0;
+    border-collapse: collapse;
+    margin-top: 0;
+    margin-bottom: 16px;
+}
+
 a {
 /*
 	color: rgba(80, 160, 228);
