--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,10 @@ table {
     margin-bottom: 16px;
 }
 
+th {
+    background-color: #eee;
+}
+
 tr {
     display: table-row;
     vertical-align: inherit;
@@ -74,12 +78,12 @@ table tr {
 }
 
 table tr:nth-child(2n) {
-    background-color: #dadada;
+    background-color: #bbb;
 }
 
 table th, table td {
     padding: 6px 13px;
-    border: 2px solid #ddd;
+    border: 2px solid #848484;
 }
 
 a {
